--- a/datenschutz.html
+++ b/datenschutz.html
@@ -31,11 +31,13 @@
   <body>
     <nav class="navbar navbar-expand-lg fixed-top bg-light">
       <div class="container-fluid">
-        <img
-          src="/images/logo_beauty.png"
-          alt="Logo Beaty-Center"
-          class="logo ms-2"
-        />
+        <a href="/"
+          ><img
+            src="/images/logo_beauty.png"
+            alt="Logo Beaty-Center"
+            class="logo ms-2"
+          />
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -50,9 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html"
-                >Start</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/#behandlungen">Behandlungen</a>
@@ -234,11 +234,11 @@
     <div class="container-fluid">
       <footer>
         <div class="row">
-          <div class="col-sm-7">
+          <div class="col-sm-8">
             Beauty-Center Roswitha Haas | Gärtnerstraße 28/1 | 77933 Lahr |
             Tel.: 07821 / 98 266 23
           </div>
-          <div class="col-sm-5 impressum-datenschutz">
+          <div class="col-sm-4 impressum-datenschutz">
             <a href="/impressum.html">Impressum</a> |
             <a href="/datenschutz.html">Datenschutz</a>
           </div>
