--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
   <body>
     <nav class="navbar navbar-expand-lg fixed-top bg-light">
       <div class="container-fluid">
-        <img
-          src="/images/logo_beauty.png"
-          alt="Logo Beaty-Center"
-          class="logo ms-2"
-        />
+        <a href="/"
+          ><img
+            src="/images/logo_beauty.png"
+            alt="Logo Beaty-Center"
+            class="logo ms-2"
+          />
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -50,9 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html"
-                >Start</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/#behandlungen">Behandlungen</a>
@@ -78,11 +78,41 @@
             <img src="/images/beauty_web.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
+            <img
+              src="/images/gesicht_web.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
             <img src="/images/fusse_web.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
+            <img src="/images/hand_web.jpg" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img src="/images/slide_1_1.jpg" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
             <img
-              src="/images/gesicht_web_0.jpg"
+              src="/images/haarentfernung_web.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="/images/fingernagel_web.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img src="/images/augen_web.jpg" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="/images/permanent-makeup_web.jpg"
               class="d-block w-100"
               alt="..."
             />
@@ -194,11 +224,11 @@
     <div class="container-fluid">
       <footer>
         <div class="row">
-          <div class="col-md-7">
+          <div class="col-md-8">
             Beauty-Center Roswitha Haas | Gärtnerstraße 28/1 | 77933 Lahr |
             Tel.: 07821 / 98 266 23
           </div>
-          <div class="col-md-5 impressum-datenschutz">
+          <div class="col-md-4 impressum-datenschutz">
             <a href="/impressum.html">Impressum</a> |
             <a href="/datenschutz.html">Datenschutz</a>
           </div>
