Small css adjustments

--- a/impressum.html
+++ b/impressum.html
@@ -68,7 +68,7 @@
       </div>
     </nav>
     <div class="container impressum">
-      <h6>Verantwortlich für Website</h6>
+      <h6>Verantwortlich für diese Website</h6>
       <div class="highlight mt-4">Beauty-Center Roswitha Haas</div>
       <p>
         Gärtnerstraße 28/1 <br />
