--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="img/png" href="images/favicon.png" />
     <link rel="stylesheet" href="src/style.css" />
     <title>Beauty-Center Roswitha Haas</title>
   </head>
