--- a/preise.html
+++ b/preise.html
@@ -166,7 +166,7 @@
               <div class="col-2">12,50</div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-md mt-3 mt-md-0">
             <h4>Spezial-Gesichtsbehandlungen</h4>
             <div class="row mt-3">
               <div class="col-9">
