Added alt-element to images

--- a/index.html
+++ b/index.html
@@ -76,46 +76,66 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/images/beauty_web.jpg" class="d-block w-100" alt="..." />
+            <img
+              src="/images/beauty_web.jpg"
+              class="d-block w-100"
+              alt="Lassen Sie sich verwöhnen"
+            />
           </div>
           <div class="carousel-item">
             <img
               src="/images/gesicht_web.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Purer Genuss - Alles was die Haut braucht"
             />
           </div>
           <div class="carousel-item">
-            <img src="/images/fusse_web.jpg" class="d-block w-100" alt="..." />
+            <img
+              src="/images/fusse_web.jpg"
+              class="d-block w-100"
+              alt="Erleben Sie schöne, streichelzarte Füße"
+            />
           </div>
           <div class="carousel-item">
-            <img src="/images/hand_web.jpg" class="d-block w-100" alt="..." />
+            <img
+              src="/images/hand_web.jpg"
+              class="d-block w-100"
+              alt="Exklusive Pflege für Ihre Haut"
+            />
           </div>
           <div class="carousel-item">
-            <img src="/images/slide_1_1.jpg" class="d-block w-100" alt="..." />
+            <img
+              src="/images/slide_1_1.jpg"
+              class="d-block w-100"
+              alt="Eine positive Ausstrahlung beginnt damit, sich selbst etwas Gutes zu tun"
+            />
           </div>
           <div class="carousel-item">
             <img
               src="/images/haarentfernung_web.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Haarentfernung - seidig glatte Haut"
             />
           </div>
           <div class="carousel-item">
             <img
               src="/images/fingernagel_web.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Gepflegte Fingernägel geben Ihnen Sicherheit"
             />
           </div>
           <div class="carousel-item">
-            <img src="/images/augen_web.jpg" class="d-block w-100" alt="..." />
+            <img
+              src="/images/augen_web.jpg"
+              class="d-block w-100"
+              alt="Augen-Blicke"
+            />
           </div>
           <div class="carousel-item">
             <img
               src="/images/permanent-makeup_web.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Das Make-up von Dauer"
             />
           </div>
         </div>
