--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
         <a href="/"
           ><img
             src="/images/logo_beauty.png"
-            alt="Logo Beaty-Center"
+            alt="Logo Beauty-Center"
             class="logo ms-2"
+            title="Home"
           />
         </a>
         <button
@@ -53,16 +54,26 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="index.html"
+                title="Home"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/#behandlungen">Behandlungen</a>
+              <a class="nav-link" href="/#behandlungen" title="Behandlungen"
+                >Behandlungen</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/#ueber-uns">Über uns</a>
+              <a class="nav-link" href="/#ueber-uns" title="Über uns"
+                >Über uns</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/preise.html">Preise</a>
+              <a class="nav-link" href="/preise.html" title="Preise">Preise</a>
             </li>
           </ul>
         </div>
@@ -250,8 +261,8 @@
             Tel.: 07821 / 98 266 23
           </div>
           <div class="col-md-4 impressum-datenschutz">
-            <a href="/impressum.html">Impressum</a> |
-            <a href="/datenschutz.html">Datenschutz</a>
+            <a href="/impressum.html" title="Impressum">Impressum</a> |
+            <a href="/datenschutz.html" title="Datenschutz">Datenschutz</a>
           </div>
         </div>
       </footer>
