--- a/preise.html
+++ b/preise.html
@@ -99,7 +99,7 @@
                 Hautreinigung, ausgiebige Gesichts-, Hals- und Dekolletéund
                 Nackenmassage, Maske, Abschlusspflege
               </div>
-              <div class="col-3">40,-</div>
+              <div class="col-3">43,-</div>
             </div>
             <div class="row mt-3">
               <div class="col-9">
@@ -134,11 +134,11 @@
             </div>
             <div class="row">
               <div class="col-9">Oberlippe</div>
-              <div class="col-3">ab 7,50</div>
+              <div class="col-3">ab 8,50</div>
             </div>
             <div class="row">
               <div class="col-9">Kinn</div>
-              <div class="col-3">ab 7,50</div>
+              <div class="col-3">ab 8,50</div>
             </div>
             <div class="row">
               <div class="col-9">Achsel</div>
@@ -162,11 +162,11 @@
             </div>
             <div class="row">
               <div class="col-9">Beine bis Knie</div>
-              <div class="col-3">25,-</div>
+              <div class="col-3">30,-</div>
             </div>
             <div class="row">
               <div class="col-9">Beine ganz</div>
-              <div class="col-3">ab 45,-</div>
+              <div class="col-3">ab 48,-</div>
             </div>
             <div class="row mt-3">
               <h4>Färben</h4>
@@ -186,7 +186,7 @@
                 Die sanfte Anti-Aging Waffe! <br />
                 Faltenglättung und Aufpolsterung auf höchstem Niveau
               </div>
-              <div class="col-3">55,-</div>
+              <div class="col-3">58,-</div>
             </div>
             <div class="row mt-3">
               <div class="col-9">
@@ -195,7 +195,7 @@
                 und Linien, Aufhellung von Pigmentstörungen, Porenverkleinerung
                 und Verfeinerung des Hautbildes
               </div>
-              <div class="col-3">67,-</div>
+              <div class="col-3">68,-</div>
             </div>
             <div class="row mt-3">
               <div class="col-9">
@@ -203,43 +203,39 @@
                 Die Luxusbehandlung mit Diamanten! br (Nur in Verbindung mit
                 einer Pflegebehandlung möglich)
               </div>
-              <div class="col-3">12,50</div>
+              <div class="col-3">15,-</div>
             </div>
             <div class="row mt-3">
               <div class="col-9">
                 <h5>Fruchtsäure-Behandlung</h5>
                 Verfeinerung des Hautbildes, Minderung von Pigmentflecken
               </div>
-              <div class="col-3">25,-</div>
+              <div class="col-3">28,-</div>
             </div>
             <div class="row mt-3">
               <div class="col-9">
                 <h5>Ultraschall-Behandlung</h5>
                 Mikromassage und einschleusen von Wirkstoffen.
               </div>
-              <div class="col-3">35,-</div>
+              <div class="col-3">38,-</div>
             </div>
             <div class="row mt-3">
               <h5>Wohlfühlbehandlungen für Hände und Füße</h5>
             </div>
             <div class="row">
-              <div class="col-9">Maniküre</div>
-              <div class="col-3">29,- / 33,-</div>
+              <div class="col-9">Maniküre ohne / mit Nagellack</div>
+              <div class="col-3">30,- / 35,-</div>
             </div>
             <div class="row">
-              <div class="col-9">
-                Handpeeling mit Paraffinpackung und ausgiebiger Handmassage
-              </div>
+              <div class="col-9">Handpeeling mit Paraffinpackung</div>
               <div class="col-3">23,-</div>
             </div>
             <div class="row">
-              <div class="col-9">Pediküre</div>
-              <div class="col-3">29,- / 33,-</div>
+              <div class="col-9">Pediküre ohne / mit Nagellack</div>
+              <div class="col-3">30,- / 35,-</div>
             </div>
             <div class="row">
-              <div class="col-9">
-                Fußpeeling mit Paraffinpackung und ausgiebiger Fußmassage
-              </div>
+              <div class="col-9">Fußpeeling mit Paraffinpackung</div>
               <div class="col-3">23,-</div>
             </div>
             <div class="row mt-3">
