--- a/index.html
+++ b/index.html
@@ -237,7 +237,9 @@
             />
           </div>
           <div class="col-md reduced-spacing">
-            <h2>So finden Sie uns</h2>
+            <h2>Öffnungszeiten</h2>
+            <p>Montag - Freitag: 8:30 - 13:00 Uhr</p>
+            <h6>So finden Sie uns</h6>
             <div class="map pb-5">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2652.0585745063718!2d7.873293275218941!3d48.3401794370363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47912e45711161b7%3A0x27f8ae3a26a2d32!2sBeauty-Center%20Roswitha%20Haas!5e0!3m2!1sde!2sde!4v1679860291854!5m2!1sde!2sde"
